# Krea2-Multi-Character-Lora-Node-w-bounding-box-By-Fedor

./: .gitignore  LICENSE  README.md  __init__.py  krea2_reference_lock.py  krea2_regional_multilora.py  krea2_regional_multilora_v3.py  pyproject.toml
example_workflows/: krea2_regional_multilora.json
web/: krea2_regional_multilora.js  krea2_regional_multilora_v3.js
