[project]
name = "comfyui-krea2-regional-multilora"
description = "Krea2 Regional Multi-LoRA (By Fedor) - constrain each character LoRA to its own bounding box via masked activation-delta injection."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Fedor" }]
dependencies = [
    "torch",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/CliffNodes/Krea2-Multi-Character-Lora-Node-w-bounding-box-By-Fedor"

[tool.comfy]
PublisherId = "CliffNodes"
DisplayName = "Krea2 Regional Multi-LoRA (By Fedor)"
Icon = ""
